first index.html

--- a/index.html
+++ b/index.html
@@ -5,27 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
-
     <title>Frontend Mentor | Job Listings</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <link rel="stylesheet" href="./my style.css" />
   </head>
   <body>
-    <div>my code</div>
+    <header>
+      <img src="images\bg-header-desktop.svg" alt="Header Image" />
+    </header>
+    <main>
+      <div id="job-listings"></div>
+    </main>
+    <script src="./index.js"></script>
   </body>
 </html>
