--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       <img src="images\bg-header-desktop.svg" alt="Header Image" />
     </header>
     <main>
+      <div class="filter-container">
+        <div class="filter-tags"></div>
+        <span class="clear-filters">Clear</span>
+      </div>
       <div id="job-listings"></div>
     </main>
     <script src="./index.js"></script>
